--- a/loginform.html
+++ b/loginform.html
@@ -3,22 +3,21 @@
 
 <head >
     <title >TREDY E-COM</title>
-    <title>TREDY E-COM</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="loginform.css">
     
 </head>
 <body>
     <div>
-        <div class="container mt=5 pt=5">
+        <div class="container">
 
             <div class="row">
-               <div class="col-12 col-sm-8 col-md-6 m-auto">
-                <div class="card border-0 shadow">
+               <div class="col-12 col-sm-10 col-md-6 m-auto">
+                <div class="card  ">
                  <div class="card-body">
-                   <form action="">
+                   <form class="red" action="">
 
-                    <div class="text-center nt-3">
+                    <div class="text-center ">
                     <svg xmlns="http://www.w3.org/2000/svg" width="66" height="56" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
                         <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
                         <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
